# Physical-AI---Humanoid-Rebotics-Book

./: .gitignore  .vercelignore  ADR-001-Documentation-Technology-Stack.md  README.md  docker-compose.yml  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
.specify/memory/: constitution.md
Backend/: .env  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
Backend/app/: __init__.py  config.py  main.py
Backend/app/api/: health.py  query.py  routes.py
Backend/app/db/: __init__.py  postgres.py  qdrant.py
Backend/app/db/migrations/: env.py
Backend/app/db/migrations/versions/: 20251217_000001_initial_schema.py
Backend/app/models/: __init__.py  entities.py  requests.py  responses.py
Backend/app/services/: embedding.py  generation.py  retrieval.py
Backend/app/utils/: logging.py  sanitizer.py
Backend/cli/: __init__.py
Backend/tests/: conftest.py
Backend/tests/integration/: test_generation.py
Backend/tests/unit/: test_embedding.py  test_sanitizer.py
Educational book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/: intro.md
docs/capstone/: intro.md
docs/tutorial-basics/: markdown-features.mdx
history/adr/: ADR-001-Task-Structure-for-Physical-AI-Course.md  ADR-002-RAG-Chatbot-Backend-Technology-Stack.md  ADR-003-RAG-Data-Persistence-Stack.md  ADR-004-Embedding-Strategy-Primary-Fallback.md
specs/001-physical-ai-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+66 files in other folders)
