[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG Chatbot Backend for Physical AI & Humanoid Robotics Book"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # OpenAI & LLM
    "openai>=1.12.0",
    "tiktoken>=0.6.0",
    "cohere>=5.5.8",

    # Vector Database
    "qdrant-client>=1.7.0",

    # PostgreSQL
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Data Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
